// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders modal for mobile view 1`] = `
<DocumentFragment>
  <div
    class="sc-pkfPC haHNKR sc-psDhf iAENMo"
  />
</DocumentFragment>
`;

exports[`Sidebar renders with collapsed sidebar 1`] = `
<DocumentFragment>
  <div
    class="sc-pkfPC haHNKR sc-psDhf iAENMo"
  >
    <div
      class="sc-AxirZ sc-AxhCb sc-oTLFK liZYIB"
      color="tertiary.dark"
      width="56"
    />
  </div>
</DocumentFragment>
`;

exports[`Sidebar renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pkfPC haHNKR sc-psDhf iAENMo"
  >
    <div
      class="sc-AxirZ sc-AxhCb sc-oTLFK dmuitw"
      color="tertiary.dark"
      width="200"
    />
  </div>
</DocumentFragment>
`;
